Added ContactSection, CEOLetterSection, ReviewSection

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -44,7 +44,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003EA team of professionals\u003Cbr\u003Ewith years of experience\u003C/strong\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EA team of professionals\u003Cbr\u003Ewith years of experience\u003C/span\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         },
         {
@@ -521,12 +521,228 @@
           }
         }
       ]
+    },
+    {
+      "contentTypeKey": "8d471a77-8037-4665-9c2c-8461ff06a000",
+      "key": "c0b1294f-18a5-4a9c-ab41-71640d0370c6",
+      "udi": null,
+      "values": [
+        {
+          "alias": "ceoImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b0b65417-da7e-4fff-bb86-e8c5d7c10462",
+              "mediaKey": "40cf1b69-09bc-451d-8e82-4ee3fef9f4ae",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "ceoImageCaption",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003Cem\u003ETina Fox - CEO \u0026amp; Founder at Onatrix\u003C/em\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "ceoLongLetter",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-md font-light\u0022\u003E\u003Cem\u003E\u201CWe have over 25 years of experience providing expert financial advice to both businesses and individuals.\u201D\u003C/em\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003ELorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae metus a massa lobortis sollicitudin. Cras ut nulla quam. Maecenas tempus felis quis lorem malesuada vehicular.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003EMorbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003ECras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non est. Pellentesque imperdiet tortor ut elementum viverra.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003EPhasellus laoreet, sapien id euismod hendrerit, nibh ligula hendrerit libero, sit amet hendrerit elit turpis nec velit. Praesent tincidunt nisi at vulputate ornare. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum elit at urna dapibus viverra. Etiam lectus libero, condimentum eget justo ac, accumsan suscipit libero.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003EMorbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum i commodo, eros quis consequat consequat.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003ECras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non est. Pellentesque imperdiet tortor ut elementum viverra.\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-light\u0022\u003ECras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non est. Pellentesque imperdiet tortor ut elementum viverra.\u003C/p\u003E"
+          }
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "f9446dda-55cc-437c-890c-a824a75779b2",
+      "key": "119f89e9-a676-414d-80c2-e4348e2e1f8e",
+      "udi": null,
+      "values": [
+        {
+          "alias": "reviewSectionLabel",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xs font-bold\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003EGREAT REVIEWS FOR OUR SERVICES\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "reviewSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ETrusted by some\u003Cbr\u003EBiggest Names\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "reviewSectionText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp\u003E\u003Cem\u003E\u003Cspan class=\u0022text-body-text-100\u0022\u003ESeamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals.\u003C/span\u003E\u003C/em\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E\u003Cp\u003E\u003Cimg data-udi=\u0022umb://media/857e48a64ed641fbbace8d43d7ada5a4\u0022 src=\u0022\u0022 alt=\u0022Rating.svg\u0022 width=\u002295\u0022 height=\u002214\u0022\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-xs font-regular\u0022\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "reviewSectionImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "1b0a815d-1e37-40e2-b08f-c684ca30f427",
+              "mediaKey": "cc798baf-3f4f-469b-b58c-4a94e518d3fe",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "reviewSectionSignature",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003EKevin Gardner\u003C/span\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-md font-regular\u0022\u003E\u003Cem\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003ESwebank\u003C/span\u003E\u003C/em\u003E\u003C/p\u003E"
+          }
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "7a8e1b96-c6af-4a20-83a7-c253361c46e4",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
     }
   ],
-  "settingsData": [],
+  "settingsData": [
+    {
+      "contentTypeKey": "ad3aa35d-ce6b-4b9f-8d79-061f80a65355",
+      "key": "ffe124d6-0d8b-4f33-b260-df7af8935a52",
+      "udi": null,
+      "values": [
+        {
+          "alias": "showServiceLabel",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "0"
+        }
+      ]
+    }
+  ],
   "expose": [
     {
       "contentKey": "9825435b-1594-46bd-aeb2-5ce6fe46b69d",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "c0b1294f-18a5-4a9c-ab41-71640d0370c6",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "119f89e9-a676-414d-80c2-e4348e2e1f8e",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "7a8e1b96-c6af-4a20-83a7-c253361c46e4",
       "culture": null,
       "segment": null
     }
@@ -534,9 +750,27 @@
   "Layout": {
     "Umbraco.BlockList": [
       {
+        "contentKey": "c0b1294f-18a5-4a9c-ab41-71640d0370c6",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "119f89e9-a676-414d-80c2-e4348e2e1f8e",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
         "contentKey": "9825435b-1594-46bd-aeb2-5ce6fe46b69d",
         "contentUdi": null,
         "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "7a8e1b96-c6af-4a20-83a7-c253361c46e4",
+        "contentUdi": null,
+        "settingsKey": "ffe124d6-0d8b-4f33-b260-df7af8935a52",
         "settingsUdi": null
       }
     ]
