--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -29,6 +29,16 @@
     },
     {
       "contentElementTypeKey": "0e0af2f4-d5ed-4793-aaef-b859e886bda9"
+    },
+    {
+      "contentElementTypeKey": "8d471a77-8037-4665-9c2c-8461ff06a000"
+    },
+    {
+      "contentElementTypeKey": "f9446dda-55cc-437c-890c-a824a75779b2"
+    },
+    {
+      "contentElementTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "settingsElementTypeKey": "ad3aa35d-ce6b-4b9f-8d79-061f80a65355"
     }
   ]
 }]]></Config>
