background in contact section fixed

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -670,7 +670,7 @@
             {
               "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
               "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -685,7 +685,7 @@
             {
               "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
               "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -711,16 +711,19 @@
   ],
   "settingsData": [
     {
-      "contentTypeKey": "ad3aa35d-ce6b-4b9f-8d79-061f80a65355",
+      "contentTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c",
       "key": "ffe124d6-0d8b-4f33-b260-df7af8935a52",
       "udi": null,
       "values": [
         {
-          "alias": "showServiceLabel",
+          "alias": "contactBgColor",
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "0"
+          "value": {
+            "label": "White-100",
+            "value": "#f7f7f7"
+          }
         }
       ]
     }
