--- a/uSync/v16/Content/investment-analysis.config
+++ b/uSync/v16/Content/investment-analysis.config
@@ -24,8 +24,167 @@
   "markup": "\u003Cp\u003EInvestment Analysis\u003C/p\u003E"
 }]]></Value>
     </pageTitle>
+    <sections>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "5fafb26a-ddbd-4a4e-8763-4b3f663e25d8",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c",
+      "key": "8ad435f1-0e68-4b79-8a4d-382c66ffec7e",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactBgColor",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "label": "White-100",
+            "value": "#f7f7f7"
+          }
+        }
+      ]
+    }
+  ],
+  "expose": [
+    {
+      "contentKey": "5fafb26a-ddbd-4a4e-8763-4b3f663e25d8",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "5fafb26a-ddbd-4a4e-8763-4b3f663e25d8",
+        "contentUdi": null,
+        "settingsKey": "8ad435f1-0e68-4b79-8a4d-382c66ffec7e",
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
+    </sections>
     <serviceDetailAsides>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "7aaeb5c3-6ba8-46b8-94a4-40a5904f406c",
+      "key": "2d97b407-785b-41b2-b9b3-824781405e7f",
+      "udi": null,
+      "values": [
+        {
+          "alias": "infoTiitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "About us"
+          }
+        },
+        {
+          "alias": "infoImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "cc0cfe02-bba9-4cd3-aecf-8512cb66120d",
+              "mediaKey": "cf2c9ed5-964c-47db-8444-58b92f4ea615",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "infoText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+        }
+      ]
+    }
+  ],
+  "settingsData": [],
+  "expose": [
+    {
+      "contentKey": "2d97b407-785b-41b2-b9b3-824781405e7f",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "2d97b407-785b-41b2-b9b3-824781405e7f",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
     </serviceDetailAsides>
     <serviceDetailBody>
       <Value><![CDATA[]]></Value>
