--- a/uSync/v16/Content/risk-management.config
+++ b/uSync/v16/Content/risk-management.config
@@ -14,8 +14,110 @@
   </Info>
   <Properties>
     <pageTitle>
-      <Value><![CDATA[Risk Management]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "Risk Management"
+}]]></Value>
     </pageTitle>
+    <sections>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "1ff2436e-0b19-419a-8313-05624ad43273",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c",
+      "key": "0f6371cc-6e7a-4bd0-bbe1-0e911fb94018",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactBgColor",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "label": "White-100",
+            "value": "#f7f7f7"
+          }
+        }
+      ]
+    }
+  ],
+  "expose": [
+    {
+      "contentKey": "1ff2436e-0b19-419a-8313-05624ad43273",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "1ff2436e-0b19-419a-8313-05624ad43273",
+        "contentUdi": null,
+        "settingsKey": "0f6371cc-6e7a-4bd0-bbe1-0e911fb94018",
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
+    </sections>
     <serviceDetailAsides>
       <Value><![CDATA[{
   "contentData": [
@@ -29,7 +131,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "About us"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "About us"
+          }
         },
         {
           "alias": "infoImage",
