--- a/uSync/v16/Content/services.config
+++ b/uSync/v16/Content/services.config
@@ -63,6 +63,58 @@
           }
         }
       ]
+    },
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "6f887e78-1e79-45bb-8d02-4370d0ff9f88",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
     }
   ],
   "settingsData": [
@@ -89,11 +141,33 @@
           "value": "0"
         }
       ]
+    },
+    {
+      "contentTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c",
+      "key": "419d2002-96fb-4716-80a7-fd9cb48d0d0d",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactBgColor",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "label": "White-100",
+            "value": "#f7f7f7"
+          }
+        }
+      ]
     }
   ],
   "expose": [
     {
       "contentKey": "00ec81cd-9154-4ac1-a9e0-3e97373377de",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "6f887e78-1e79-45bb-8d02-4370d0ff9f88",
       "culture": null,
       "segment": null
     }
@@ -104,6 +178,12 @@
         "contentKey": "00ec81cd-9154-4ac1-a9e0-3e97373377de",
         "contentUdi": null,
         "settingsKey": "a8f93902-87a4-4f0e-9b9d-5baa66f11587",
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "6f887e78-1e79-45bb-8d02-4370d0ff9f88",
+        "contentUdi": null,
+        "settingsKey": "419d2002-96fb-4716-80a7-fd9cb48d0d0d",
         "settingsUdi": null
       }
     ]
