--- a/uSync/v16/Content/site-settings.config
+++ b/uSync/v16/Content/site-settings.config
@@ -14,14 +14,129 @@
   </Info>
   <Properties>
     <contactAddress>
-      <Value><![CDATA[Klarabergsviadukten 90, 111 52 Stockholm]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "Klarabergsviadukten 90, 111 52 Stockholm"
+}]]></Value>
     </contactAddress>
     <contactEmail>
-      <Value><![CDATA[sales@onatrix.com]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "sales@onatrix.com"
+}]]></Value>
     </contactEmail>
     <contactPhone>
-      <Value><![CDATA[+46 8 123 456 75]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "\u002B46 8 123 456 75"
+}]]></Value>
     </contactPhone>
+    <contactSection>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "712f9553-7545-40a1-a860-650094ec0cd9",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "ad3aa35d-ce6b-4b9f-8d79-061f80a65355",
+      "key": "8aa8bc3d-6984-461a-8889-9e9db8e80574",
+      "udi": null,
+      "values": [
+        {
+          "alias": "showServiceLabel",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "0"
+        }
+      ]
+    }
+  ],
+  "expose": [
+    {
+      "contentKey": "712f9553-7545-40a1-a860-650094ec0cd9",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "712f9553-7545-40a1-a860-650094ec0cd9",
+        "contentUdi": null,
+        "settingsKey": "8aa8bc3d-6984-461a-8889-9e9db8e80574",
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
+    </contactSection>
     <platformList>
       <Value><![CDATA[{
   "contentData": [
@@ -44,7 +159,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "https://www.facebook.com"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "https://www.facebook.com"
+          }
         }
       ]
     },
@@ -67,7 +190,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "https://www.linkedin.com"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "https://www.linkedin.com"
+          }
         }
       ]
     },
@@ -90,7 +221,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "https://www.x.com"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "https://www.x.com"
+          }
         }
       ]
     }
@@ -149,7 +288,15 @@
 ]]]></Value>
     </siteLogo>
     <siteName>
-      <Value><![CDATA[Onatrix]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "Onatrix"
+}]]></Value>
     </siteName>
   </Properties>
 </Content>
