--- a/uSync/v16/ContentTypes/contactsettings.config
+++ b/uSync/v16/ContentTypes/contactsettings.config
@@ -1,41 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="a2349659-213a-4669-aa17-77307afd67b0" Alias="contactPage" Level="2">
+<ContentType Key="1558ef8c-4b4a-49db-8a2b-62144953ef5c" Alias="contactSettings" Level="3">
   <Info>
-    <Name>Contact Page</Name>
-    <Icon>icon-message-open</Icon>
+    <Name>Contact Settings</Name>
+    <Icon>icon-plugin</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
+    <IsElement>true</IsElement>
     <HistoryCleanup>
       <PreventCleanup>False</PreventCleanup>
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Pages</Folder>
-    <Compositions>
-      <Composition Key="d65dfadb-d5e0-4302-bf53-3b5926c90ecd">pageHeader</Composition>
-    </Compositions>
-    <DefaultTemplate>ContactPage</DefaultTemplate>
-    <AllowedTemplates>
-      <Template Key="e2e524a3-d257-47cb-bda6-45183cb76d7a">ContactPage</Template>
-    </AllowedTemplates>
+    <Folder>Sections/Contact</Folder>
+    <Compositions />
+    <DefaultTemplate></DefaultTemplate>
+    <AllowedTemplates />
   </Info>
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>83719fcd-74fc-4df6-b79d-f809b7555ee8</Key>
-      <Name>Sections</Name>
-      <Alias>sections</Alias>
-      <Definition>a3067433-eeb3-4555-b7c1-f9b4607dc5b6</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Key>8180d9ea-b0dd-4809-8da4-fb1a029d045d</Key>
+      <Name>Background Color</Name>
+      <Alias>contactBgColor</Alias>
+      <Definition>0225af17-b302-49cb-9176-b9f35cab9c17</Definition>
+      <Type>Umbraco.ColorPicker</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="content">Content</Tab>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -44,9 +40,9 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>f6fb69a4-6b37-4bd6-aa5a-9e37dfb32b09</Key>
-      <Caption>Content</Caption>
-      <Alias>content</Alias>
+      <Key>7eb75295-cb63-4bde-8245-56453ffa24f0</Key>
+      <Caption>Settings</Caption>
+      <Alias>settings</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
     </Tab>
