--- a/uSync/v16/ContentTypes/servicedetail.config
+++ b/uSync/v16/ContentTypes/servicedetail.config
@@ -26,6 +26,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>f0b38527-9bc7-4f28-8631-3ea715168532</Key>
+      <Name>Sections</Name>
+      <Alias>sections</Alias>
+      <Definition>a3067433-eeb3-4555-b7c1-f9b4607dc5b6</Definition>
+      <Type>Umbraco.BlockList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="sections">Sections</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>7f4fbdbf-32fb-4fa9-a08e-3b2a8dbdb60e</Key>
       <Name>Widgets</Name>
       <Alias>serviceDetailAsides</Alias>
@@ -104,6 +120,13 @@
       <Alias>content</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>e616578a-be8a-4107-95de-066d1a6ba3e5</Key>
+      <Caption>Sections</Caption>
+      <Alias>sections</Alias>
+      <Type>Group</Type>
+      <SortOrder>2</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
