--- a/uSync/v16/Content/bonds-commodities.config
+++ b/uSync/v16/Content/bonds-commodities.config
@@ -14,8 +14,110 @@
   </Info>
   <Properties>
     <pageTitle>
-      <Value><![CDATA[Bonds & Commodities]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "Bonds \u0026 Commodities"
+}]]></Value>
     </pageTitle>
+    <sections>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
+      "key": "19d34e50-08dc-4d0c-89d5-3d3ccda3995e",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactSectionBackgroundImageDot",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "93dba525-efce-4fd8-b5a2-d2b8e44d032b",
+              "mediaKey": "0f3e74f6-ce16-4f8f-a17a-79032bb79325",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionContactPersonImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "b04ea04e-a29d-45c8-996a-67be7a455859",
+              "mediaKey": "db62164d-ccb6-46f9-90af-d6d2c8237b89",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "contactSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ELet us know about your next project\u003C/span\u003E\u003C/p\u003E"
+          }
+        }
+      ]
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c",
+      "key": "8f12f019-5c31-4464-89e9-1df55fb997cf",
+      "udi": null,
+      "values": [
+        {
+          "alias": "contactBgColor",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "label": "White-100",
+            "value": "#f7f7f7"
+          }
+        }
+      ]
+    }
+  ],
+  "expose": [
+    {
+      "contentKey": "19d34e50-08dc-4d0c-89d5-3d3ccda3995e",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "19d34e50-08dc-4d0c-89d5-3d3ccda3995e",
+        "contentUdi": null,
+        "settingsKey": "8f12f019-5c31-4464-89e9-1df55fb997cf",
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
+    </sections>
     <serviceDetailAsides>
       <Value><![CDATA[{
   "contentData": [
@@ -40,7 +142,7 @@
             {
               "key": "36e9a1cf-b69e-469c-a858-f48d164c94b1",
               "mediaKey": "cf2c9ed5-964c-47db-8444-58b92f4ea615",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -51,7 +153,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "About us"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "About us"
+          }
         }
       ]
     }
